# AISS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
aiss/: __init__.py
aiss/cli/: __init__.py  main.py
aiss/core/: __init__.py  config.py  models.py  scanner.py
aiss/modules/: __init__.py  agent_test.py  api_check.py  api_test.py  social_test.py
aiss/reporting/: __init__.py  generator.py
aiss/reporting/templates/: report.html
tests/: test_scanner.py
